# psrchive_CDFT

./: #config.log#  Makefile  Makefile.in  README.md  aclocal.m4  config.h  config.h.in~  config.status  configure  configure.ac  libtool
Base/: Makefile  Makefile.in
Base/Applications/: Makefile  Makefile.in
Base/Checks/: Makefile  Makefile.in
Base/Classes/: Makefile  Makefile.in
Base/Extensions/: Makefile  Makefile.in
Base/Formats/: Makefile  Makefile.in
Base/Resources/: Makefile  Makefile.in
Management/: Makefile  Makefile.in  psrchive  psrchive_install.h  release.csh
Management/.deps/: Config_ensure_linkage.Po  psrchive_config.Po  psrchive_info.Po
More/: Makefile  Makefile.in
More/Applications/: Makefile  Makefile.am  Makefile.in  Makefile~  lmfit  pafit  pat.C  sesdiv
More/General/: Makefile  Makefile.in
More/MEAL/: Makefile  Makefile.in
More/Plotting/: Makefile  Makefile.in
More/Polarimetry/: Makefile  Makefile.am  Makefile.in  Makefile~
More/RFIMitigation/: Makefile  Makefile.in
More/Simulation/: Makefile  Makefile.in
More/Timing/: #ArrivalTime.C#  #FourierDomainFit.C#  .ArrivalTime.C.swp  (+7 more)
Util/: Makefile  Makefile.am  Makefile.in
Util/cdft/: 2Dfftfit.f  2Dtim.c  Makefile  Makefile.am  Makefile.in  covsrt.f  cprof.f  dchisqr_2D.f  fit.f  fscrunch.f  gaussj.f  initialguess.f  initialguess.f.bk  mrqcof.f  mrqmin.f  mrqmin.f.old  sepFFT.f  tmplmatching-single.f  twoDFFTfit_fitDM.f  wrap.f  zbrent_2D.f
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
config/: Makefile  Makefile.in
(+949 files in other folders)
